5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1601_2426.log
== TEST (2019-04-03 19:18:26) 
-- CODE:
t=(float(input("o tempo:"))
a=float(input("a velocidade:"))
resultado=(t+a)
-- ERROR:
File "XXXX", line 2
    a=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:18:42) 
-- CODE:
t=(float(input("o tempo:"))
a=input("a velocidade:"))
resultado=(t+a)
-- ERROR:
File "XXXX", line 2
    a=input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:18:49) 
-- CODE:
t=(float(input("o tempo:"))
a=input("a velocidade:")
resultado=(t+a)
-- ERROR:
File "XXXX", line 2
    a=input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:19:01) 
-- CODE:
t=(float(input("o tempo:"))
a=int(input("a velocidade:"))
resultado=(t+a)
-- ERROR:
File "XXXX", line 2
    a=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:19:27) 
-- CODE:
t=float(input("o tempo:"))
a=int(input("a velocidade:"))
resultado=(t+a)
-- ERROR:
File "XXXX", line 2
    a=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:19:46) 
-- CODE:
t=float(input("o tempo:"))
a=int(input("a velocidade:"))
resultado=(t+a)
print(resultado)
-- OUTPUT:
109.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:20:07) 
-- CODE:
t=float(input("o tempo:"))
a=float(input("a velocidade:"))
resultado=(t+a)
print(resultado)
-- OUTPUT:
109.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 19:20:29) 
-- CODE:
t=float(input("o tempo:"))
a=float(input("a velocidade:"))
resultado=(t+a)
print(resultado)
-- EXECUTION TIME:
0.123893
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
109.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
125.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
81.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:20:31) 
-- CODE:
t=float(input("o tempo:"))
a=float(input("a velocidade:"))
resultado=(t+a)
print(resultado)
-- OUTPUT:
109.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:21:15) 
-- CODE:
t=float(input("o tempo:"))
a=float(input("a velocidade:"))
resultado=(t+a)
print(resultado,2)
-- OUTPUT:
109.0 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 19:21:29) 
-- CODE:
t=float(input("o tempo:"))
a=float(input("a velocidade:"))
resultado=(t+a)
print(resultado,2)
-- EXECUTION TIME:
0.219281
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
109.0 2
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
125.0 2
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
81.2 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:11:37) 
-- CODE:
t=float(input("o tempo:"))
a=float(input("a velocidade:"))
resultado=(t*a)
print(resultado,2)
-- OUTPUT:
900.0 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:12:01) 
-- CODE:
t=float(input("o tempo:"))
a=float(input("a velocidade:"))
resultado=(t*a)
print(resultado,2)
-- EXECUTION TIME:
0.10973
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0 2
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0 2
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:13:12) 
-- CODE:
t=float(input("o tempo gasto:"))
a=float(input("a velocidade media:"))
resultado=(t*a)
print(resultado,12)
-- OUTPUT:
900.0 12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:13:24) 
-- CODE:
t=float(input("o tempo gasto:"))
a=float(input("a velocidade media:"))
resultado=(t*a)
print(resultado,12)
-- OUTPUT:
900.0 12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:14:02) 
-- CODE:
t=float(input("o tempo gasto:"))
a=float(input("a velocidade media:"))
resultado=(t*a)
print(resultado)
print(resultado,12)
-- OUTPUT:
900.0
900.0 12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:14:55) 
-- CODE:
t=float(input("o tempo gasto:"))
a=float(input("a velocidade media:"))
resultado=(t*a)
print(resultado)
print(resultado,12)
-- EXECUTION TIME:
0.204969
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
900.0 12
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
600.0 12
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
96.0 12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:15:16) 
-- CODE:
t=float(input("o tempo gasto:"))
a=float(input("a velocidade media:"))
resultado=t*a
print(resultado)
print(resultado,12)
-- OUTPUT:
900.0
900.0 12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:15:36) 
-- CODE:
t=float(input("o tempo gasto:"))
a=float(input("a velocidade media:"))
resultado=t*a
print(resultado)
print(resultado/12)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 02:16:01) 
-- CODE:
t=float(input("o tempo gasto:"))
a=float(input("a velocidade media:"))
resultado=t*a
print(resultado)
print(resultado/12)
-- EXECUTION TIME:
0.164459
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
